2008-09-14  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac, fastjar.texi, README, NEWS: Bumped version up to 0.97.

2008-09-14  Dalibor Topic  <robilad@kaffe.org>

	* lib/snprintf.h, lib/string.h: Removed unused files.

2008-09-14  Dalibor Topic  <robilad@kaffe.org>

	* lib/alloca_.h, lib/getopt_.h, lib/stdbool_.h, lib/stdint_.h,
	lib/stdio_.h, lib/string_.h, lib/unistd_.h, lib/wchar_.h,
	lib/wctype_.h: Removed no longer used files.

2008-09-14  Dalibor Topic  <robilad@kaffe.org>

	* lib/wctype.in.h, lib/wchar.in.h, lib/unistd.in.h, lib/string.in.h, 
	lib/stdlib.in.h, lib/stdio.in.h, lib/stdint.in.h, lib/stdbool.in.h, 
	lib/getopt.in.h, lib/float.in.h,  lib/float+.h, lib/alloca.in.h:
	Added missing files.

2008-09-14  Dalibor Topic  <robilad@kaffe.org>

	* lib/.cvsignore : Removed.

2008-09-14  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (LDADD): Fixed build on cygwin.

2008-08-14  Dalibor Topic  <robilad@kaffe.org>

	* NEWS: Updated for Joshua Sumali's fix.

2008-08-14  Joshua Sumali <jsumali@redhat.com>

	* jartool.c: Made it more compatible with OpenJDK.

	Originally, files underneath a directory were not extracted, so full path names 
	had to be specified. Also directory names had to be specified as 'dirname/' to 
	be extracted, which should be just 'dirname'. Fixed this behaviour.

2008-08-06  Dalibor Topic  <robilad@kaffe.org>

	* README: Updated the options and features list.

2008-08-06  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_INIT), fastjar.texi, README, NEWS: 
	Bumped version to 0.96. Autoupdated.

	* fastjar.texi: Added 2008 to copyright years.

	* .cvsignore, INSTALL, aclocal.m4, config.guess, config.h.in,
	config.sub, configure, depcomp, install-sh, ltmain.sh, 
	texinfo.tex, lib/.cvsignore, lib/Makefile.am, lib/Makefile.in,
	lib/alloca.c, lib/asnprintf.c, lib/config.charset, lib/getopt.c,
	lib/getopt1.c, lib/getopt_int.h, lib/gettext.h, 
	lib/localcharset.c, lib/localcharset.h, lib/malloc.c, 