@@ -1,3 +1,8 @@
+2008-09-15  Dalibor Topic  <robilad@kaffe.org>
+
+	* jartool.c (make_manifest): Only create META-INF dir when a new 
+	manifest is created, not on updates. Reported as Debian bug #489418.
+
 2008-09-14  Dalibor Topic  <robilad@kaffe.org>
 
 	* configure.ac, fastjar.texi, README, NEWS: Bumped version up to 0.97.
